# shift-agent

./: CLAUDE.md  README.md  package-lock.json
agent/: pyproject.toml
agent/data/inputs/: 01_sample.json  02_sample_prototype.json  agent-input.json
agent/model-flow/: flow_full-llm.md
agent/notebooks/: 01_agent-prototype.ipynb  02_agent-proto-02sample.ipynb
backend/: .dockerignore  .firebaserc  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  main.py  requirements.txt  test_dataconnect.py  test_firebase_connection.py
backend/app/service/agent/: pyproject.toml
backend/app/service/agent/data/inputs/: 01_sample_prototype.json  02_sample.json  03_sample.json  04_evaluate-gemini-input.json  05_evaluate-gemini-input.json  evaluate-gemini-input.json
backend/app/service/agent/data/outputs/: 01_modified_json.txt  draft_json.txt  eval_result_json.txt  eval_result_json_2.txt  eval_result_json_3.txt  final_shift.txt  modified_json_2.txt
backend/app/service/agent/docs/: development_guide.md
backend/app/service/agent/docs/agent_guide/: usage_guide.md
backend/app/service/agent/module/: shift_creator.py
backend/app/service/agent/notebooks/: 01_agent-prototype.ipynb  02_agent-proto-02sample.ipynb  03_agent-trial.ipynb  04_agent-trial-using-secret-manager.ipynb
backend/app/service/agent/shift_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/service/agent/tests/: test_shift_creator.py  test_shift_creator_ver2.py  test_shift_creator_ver3.py  test_shift_creator_ver4.py
frontend/: .env  Dockerfile  nginx.conf  package-lock.json  (+1 more)
(+242 files in other folders)
