[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "shift-agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.19.0",
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-google-genai>=2.1.5",
    "pandas>=2.3.0",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
]

[tool.setuptools.packages.find]
include = ["module*"]


[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
